HW5/javali_tests/not ours/new/HW3_MarLin/type_error/cast/OkCasts.javali.cfg.dot
digraph G {
  graph [ rankdir = "LR" ];
  subgraph cluster_0 {
    label = "Main.main"
    M0_BB0 [
      shape="record"
      label="BB0|a = new A()|b = new B()|a = b|a = (A)(b)|b = (B)(a)"
    ];
    M0_BB0 -> M0_BB1;
    M0_BB1 [
      shape="record"
      label="BB1"
    ];
  }
}
